<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_employee_list_margintop"
                android:layout_marginStart="@dimen/textview_employee_list_marginstart"
                android:text="@string/employee_name"
                android:textSize="@dimen/textsize"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginLeft="@dimen/textview_employee_list_marginleft" />

            <TextView
                android:id="@+id/textviewaddress"
                android:layout_below="@id/textviewname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margintop"
                android:layout_marginStart="@dimen/textview_employee_list_marginstart"
                android:text="@string/address"
                android:textSize="@dimen/textsize"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginLeft="@dimen/textview_employeelist_marginleft" />

          <TextView
                android:id="@+id/textviewnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textviewaddress"
                android:layout_margin="@dimen/edit_text_margintop"
                android:layout_marginStart="@dimen/textview_employee_list_marginstart"
                android:text="@string/num"
                android:textSize="@dimen/textsize"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/textview_employeelist_marginleft" />

           <TextView
                android:id="@+id/textviewmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/textview_employeelist_marginend"
                android:text="@string/options"
                android:textSize="@dimen/textview_menu_textsize"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/textview_employeelist_marginright" />






        </RelativeLayout>


    </androidx.cardview.widget.CardView>





</LinearLayout>